# Thing.CoAP

./: .gitignore  CoAPEndpoint.cpp  CoAPEndpoint.h  CoAPFunctions.h  CoAPServer.cpp  CoAPServer.h  FunctionalEndpoint.h  IPacketProvider.h  IServer.h  LICENSE  Makefile.am  MessageManager.h  MessageType.h  Method.h  Option.cpp  OptionValue.h  Packet.cpp  Packet.h  README.md  Response.h  Status.cpp  Thing.CoAP.cpp  Thing.CoAP.h  Thing.CoAP.sln  Thing.CoAP.vcxproj  Thing.CoAP.vcxproj.filters  configure.ac  library.json  library.properties
.github/workflows/: ccpp.yml  esp32.yml  esp8266.yml  linux.yml  ubuntu.yml
Docker/: Arduino.Dockerfile  Ubuntu.Dockerfile
Docker/ArduinoExamples/: ArduinoExamples.vcxproj  ArduinoExamples.vcxproj.filters
Docker/LinuxExamples/: LinuxExamples.vcxproj  LinuxExamples.vcxproj.filters
Tests/: EndpointMock.h  EndpointTest.cpp  OptionsTest.cpp  PacketProviderMock.h  PacketTest.h  ServerTest.h  Thing.CoAP.Tests.vcxproj  Thing.CoAP.Tests.vcxproj.filters  packages.config
Thing.CoAP/: Client.cpp  Client.h  ContentFormat.h  EndpointBase.cpp  EndpointBase.h  FunctionalEndpoint.cpp  FunctionalEndpoint.h  FunctionalResource.cpp  FunctionalResource.h  IClient.h  IEndpoint.h  IFunctionalEndpoint.h  IFunctionalResource.h  IMessageManager.h  IPAddress.h  IPacketProvider.h  IResource.h  IServer.h  Makefile.am  MessageManager.cpp  ObserveToken.cpp  ObserveToken.h  Observer.cpp  Observer.h  Option.cpp  Option.h  Packet.cpp  Packet.h  README.md  Request.h  ResourceBase.cpp  ResourceBase.h  ResponseCallback.h  ResponseCode.h  Server.cpp  Server.h  Status.cpp  Status.h  WebLink.cpp  WebLink.h
Thing.CoAP/.libs/: libthingcoap.lai  libthingcoap.so.0  libthingcoap.so.0.0.0
Thing.CoAP/ESP/: UDPPacketProvider.h
Thing.CoAP/Linux/: UDPPacketProvider.h
Thing.CoAP/Windows/: UDPPacketProvider.h
examples/: Makefile.am
examples/ESP32/Client/: Client.ino
examples/ESP32/Client-Discovery/: Client-Discovery.ino
examples/ESP32/Server-InlineEndpoints/: Server-InlineEndpoints.ino
examples/ESP8266/Client/: Client.ino
examples/ESP8266/Client-Discovery/: Client-Discovery.ino
examples/ESP8266/Server-InlineEndpoints/: Server-InlineEndpoints.ino
examples/Linux/Client/: Client.cpp
examples/Linux/Client-Discovery/: Client-Discovery.cpp
examples/Linux/Server-InlineEndpoints/: Server-InlineEndpoints.cpp
examples/Windows/Client/: Client.cpp  Client.vcxproj  Client.vcxproj.filters
examples/Windows/Client-Discovery/: Client-Discovery.cpp  Client-Discovery.vcxproj  Client-Discovery.vcxproj.filters
examples/Windows/Server-InlineEndpoints/: Server-InlineEndpoints.cpp  Server-InlineEndpoints.vcxproj  Server-InlineEndpoints.vcxproj.filters
tests/: ClientTest.cpp  ClientTest.h  CoAPEndpointMock.h  CoAPServerMock.h  Common.h  EndpointBaseMock.h  EndpointBaseTest.cpp  EndpointBaseTest.h  EndpointMock.h  EndpointTest.h  Makefile.am  ObserverTest.cpp  ObserverTest.h  OptionsTest.cpp  OptionsTest.h  PacketProviderMock.h  PacketTest.cpp  ResourceBaseMock.h  ResourceBaseTest.cpp  ResourceBaseTest.h  ResourceMock.h  ServerMock.h  ServerTest.cpp  ServerTest.h  StatusTest.cpp  StatusTest.h  Thing.CoAP.Tests.vcxproj  Thing.CoAP.Tests.vcxproj.filters  WebLinkTest.cpp  WebLinkTest.h  packages.config
