lib_LTLIBRARIES=libthingcoap.la
libthingcoap_includedir= $(includedir)/Thing.CoAP
libthingcoap_include_HEADERS=Client.h ContentFormat.h FunctionalResource.h Functions.h IClient.h IFunctionalResource.h IMessageManager.h IPacketProvider.h IPAddress.h IResource.h IServer.h MessageManager.h MessageType.h Method.h Observer.h ObserveToken.h Option.h OptionValue.h Packet.h Request.h ResourceBase.h Response.h ResponseCallback.h ResponseCode.h Server.h Status.h WebLink.h
libthingcoap_la_SOURCES=Client.cpp FunctionalResource.cpp MessageManager.cpp Observer.cpp ObserveToken.cpp Option.cpp Packet.cpp ResourceBase.cpp Server.cpp Status.cpp WebLink.cpp
libthingcoap_la_CXXFLAGS=-std=c++11